--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,16 @@ h2 {
   transform: translateX(12rem);
 }
 
+h3 {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+h4 {
+  font-size: 15px;
+  font-weight: 200;
+}
+
 /* Small devices 640px and up */
 @media (min-width: 640px) {
   h1 {
@@ -71,6 +81,16 @@ h2 {
     font-size: 40px;
     font-weight: 600;
   }
+
+  h3 {
+    font-size: 25px;
+    font-weight: 400;
+  }
+
+  h4 {
+    font-size: 15px;
+    font-weight: 200;
+  }
 }
 
 /* Extra large 1280px and up */
@@ -84,6 +104,16 @@ h2 {
     font-size: 40px;
     font-weight: 600;
   }
+
+  h3 {
+    font-size: 30px;
+    font-weight: 300;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 200;
+  }
 }
 
 /* 2XL 1536px and up */
@@ -96,5 +126,15 @@ h2 {
   h2 {
     font-size: 40px;
     font-weight: 600;
+  }
+
+  h3 {
+    font-size: 30px;
+    font-weight: 300;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 200;
   }
 }
